--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,61 +17,28 @@ variables:
 #
 # Workflow
 # _____________________________________________________________________________
-workflow:
-  auto_cancel:
-    on_new_commit: interruptible
-  rules:
-    # Run the CI if the commit message contains `[run ci]`
-    - if: $CI_COMMIT_MESSAGE =~ /\[run ci\]/
-      variables:
-        BENCHMARKS: $BENCHMARKS
-      when: always
-    # Do not run the CI if the commit message
-    # contains `[skip ci]` or contains `draft`
-    # Run CI whern a merge request is created
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      variables:
-        BENCHMARKS: $BENCHMARKS
-      when: always
-
-# build:
-#   only: *default_run
-#   stage: build
-#   before_script:
-#     - apt update && apt -y install cmake
-#   script:
-#     - cmake -DCMAKE_CXX_COMPILER=g++-12 -DCMAKE_VERBOSE_MAKEFILE=ON ./ 
-#     - make
-#     - cp src/mini-pic .
-#   artifacts:
-#     paths:
-#       - mini-pic
-
-
-# _____________________________________________________________________________
-#
-# Build Kokkos for V100 GPU on Ruche
-# _____________________________________________________________________________
-# build_kokkos_v100:
-#   only: *default_run
-#   tags:
-#     - ruche
-#   stage: build
-#   before_script:
-#     - module load cmake/3.21.4/gcc-11.2.0 gcc/11.2.0/gcc-4.8.5 cuda/12.2.1/gcc-11.2.0
-#   script:
-#     - git clone git@github.com:kokkos/kokkos.git
-#     - cd kokkos
-#     - git checkout develop
-#     - mkdir build_v100 install_v100
-#     - cmake -S . -B build_v100 -DCMAKE_CXX_COMPILER=g++ -DCMAKE_INSTALL_PREFIX=$(pwd)/install_v100 -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_OPENMP=ON -DKokkos_ENABLE_CUDA=ON -DKokkos_ARCH_VOLTA70=ON -DKokkos_ENABLE_CUDA_LAMBDA=ON -DCMAKE_CXX_EXTENSIONS=ON -DKokkos_ENABLE_CUDA_CONSTEXPR=ON
-#     - cd build_v100
-#     - make -j 4
-#     - make install
-#     - cd ..
-#   artifacts:
-#     paths:
-#       - $CI_PROJECT_DIR/kokkos/install_v100/
+# workflow:
+#   auto_cancel:
+#     on_new_commit: interruptible
+#   rules:
+#     # Run the CI if the commit message contains `[run ci]`
+#     - if: $CI_COMMIT_MESSAGE =~ /\[run ci\]/
+#       variables:
+#         BENCHMARKS: $BENCHMARKS
+#       when: always
+#     # Run CI when a merge request is created
+#     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+#       variables:
+#         BENCHMARKS: $BENCHMARKS
+#       when: always
+#     # Run CI on master branch
+#     - if: $CI_COMMIT_BRANCH == "master"
+#       variables:
+#         BENCHMARKS: $BENCHMARKS
+#       when: always
+#     # Do not run the CI if the commit message contains `[skip ci]`
+#     - if: $CI_COMMIT_MESSAGE =~ /\[skip ci\]/
+#       when: never
 
 # _____________________________________________________________________________
 #
@@ -98,17 +65,17 @@ test_omp:
   # only: *default_run
   rules:
     # If not on the master branch and related files have been modified, run the CI
-    - if: $CI_COMMIT_BRANCH != "master"
-      changes:
-        - src/openmp/*
-        - src/common/*
-        - src/setups/*
-        - src/main.cpp
-        - .gitlab-ci.yml
-        - tests/run.py
-        - validation/*
-        - CMakeLists.txt
-      when: always
+    # - if: $CI_COMMIT_BRANCH != "master"
+    #   changes:
+    #     - src/openmp/*
+    #     - src/common/*
+    #     - src/setups/*
+    #     - src/main.cpp
+    #     - .gitlab-ci.yml
+    #     - tests/run.py
+    #     - validation/*
+    #     - CMakeLists.txt
+    #   when: always
     # If has [run ci] in the commit message, always run the CI
     - if: $CI_COMMIT_MESSAGE =~ /\[run ci\]/
       when: always
@@ -127,7 +94,7 @@ test_omp:
   script:
     - cp -r tests tests_omp
     - cd tests_omp
-    - srun --time=00:20:00 --cpus-per-task=8 --ntasks=1 --partition=cpu_short python3 run.py -c icpx --benchmarks=$BENCHMARKS_CPU # --save-timers
+    - srun --time=00:20:00 --cpus-per-task=8 --ntasks=1 --partition=cpu_short python3 run.py -c icpx --benchmarks=$BENCHMARKS # --save-timers
   # dependencies:
   #   - build_kokkos_v100
 
@@ -140,17 +107,17 @@ test_kokkos_omp:
   # only: *default_run
   rules:
     # If not on the master branch and `src/kokkos` has been modified, run the CI
-    - if: $CI_COMMIT_BRANCH != "master"
-      changes:
-        - src/kokkos/*
-        - src/common/*
-        - src/main.cpp
-        - src/setups/*
-        - .gitlab-ci.yml
-        - tests/run.py
-        - validation/*
-        - CMakeLists.txt
-      when: always
+    # - if: $CI_COMMIT_BRANCH != "master"
+    #   changes:
+    #     - src/kokkos/*
+    #     - src/common/*
+    #     - src/main.cpp
+    #     - src/setups/*
+    #     - .gitlab-ci.yml
+    #     - tests/run.py
+    #     - validation/*
+    #     - CMakeLists.txt
+    #   when: always
     # If has `[run ci]` in the commit message, always run the CI
     - if: $CI_COMMIT_MESSAGE =~ /\[run ci\]/
       when: always
@@ -169,7 +136,7 @@ test_kokkos_omp:
   script:
     - cp -r tests tests_kokkos_omp
     - cd tests_kokkos_omp
-    - srun --time=00:20:00 --cpus-per-task=8 --ntasks=1 --partition=cpu_short python3 run.py -c icpx -g kokkos --benchmarks=$BENCHMARKS_CPU # --save-timers
+    - srun --time=00:20:00 --cpus-per-task=8 --ntasks=1 --partition=cpu_short python3 run.py -c icpx -g kokkos --benchmarks=$BENCHMARKS # --save-timers
 
 # _____________________________________________________________________________
 #
@@ -180,17 +147,17 @@ test_kokkos_gpu:
   # only: *default_run
   rules:
     # If not on the master branch and `src/kokkos` has been modified, run the CI
-    - if: $CI_COMMIT_BRANCH != "master"
-      changes:
-        - src/kokkos/*
-        - src/common/*
-        - src/setups/*
-        - src/main.cpp
-        - .gitlab-ci.yml
-        - tests/run.py
-        - validation/*
-        - CMakeLists.txt
-      when: always
+    # - if: $CI_COMMIT_BRANCH != "master"
+    #   changes:
+    #     - src/kokkos/*
+    #     - src/common/*
+    #     - src/setups/*
+    #     - src/main.cpp
+    #     - .gitlab-ci.yml
+    #     - tests/run.py
+    #     - validation/*
+    #     - CMakeLists.txt
+    #   when: always
     # If has [run ci] in the commit message, always run the CI
     - if: $CI_COMMIT_MESSAGE =~ /\[run ci\]/
       when: always
