Exclude gpu17 for the CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@
 
 variables:
   # List of GPUs to exclude from the tests
-  EXCLUDED_GPUS: ""
+  EXCLUDED_GPUS: "ruche-gpu17"
 
 # _____________________________________________________________________________
 #
